DCM-add-UUID-generation