@@ -1,6 +1,6 @@
 package com.beergode.decisionmaker.adapters.survey.rest.dto;
 
-import com.beergode.decisionmaker.survey.usecase.QuestionCreate;
+import com.beergode.decisionmaker.survey.usecase.create.QuestionCreate;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -8,6 +8,8 @@ import lombok.NoArgsConstructor;
 
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static com.beergode.decisionmaker.survey.usecase.create.QuestionCreate.questionCreate;
 
 @Data
 @Builder
@@ -19,11 +21,11 @@ public class QuestionCreateRequest {
     private List<AnswerCreateRequest> answers;
 
     public QuestionCreate toUseCase() {
-        return QuestionCreate.builder()
+        return questionCreate()
                 .text(text)
                 .answers(answers.stream()
                         .map(AnswerCreateRequest::toUseCase)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 }
